fix: line up event info button with hamburger button on mobile

--- a/frontend/src/components/Event/event.scss
+++ b/frontend/src/components/Event/event.scss
@@ -91,6 +91,7 @@
 		}
 
 		#event-info {
+			margin-left: auto;
 			@include breakpoint-min(md) {
 				border-color: $light;
 				color: $muted;
@@ -98,6 +99,10 @@
 				img {
 					width: 16px;
 				}
+			}
+
+			@include breakpoint-max(md) {
+				padding-right: 0px;
 			}
 		}
 	}
